Better main.php, showing alignment of text and pics correctly.
git-svn-id: file:///home/jaliste/hcvol/hcvol/trunk@2325 4f49b16c-3c57-40ef-8e22-7452baa6c33a

--- a/htdocs/bw/styles/YAML/main/bw_costum.css
+++ b/htdocs/bw/styles/YAML/main/bw_costum.css
@@ -379,7 +379,14 @@ body {
 
 #main .main_preposts p {
   font-size: 11px;
+
 }
+/* NEW */
+#main .main_preposts img {
+	font-size: 11px;
+	float: left; margin: 0 1em 0.15em 0; border:0;
+}
+/* NEW END */
 .main_posts p {
 
 }
